
****  Fix clocker attributes to not propagate on concats. [John Coiner]

****  Fix first clock edge and --x-initial-edge, bug1327. [Rupert Swarbrick]

****  Fix compile error on tracing of string arrays, bug1338. [Iztok Jeras]

****  Fix number parsing with newline after radix, bug1340. [George Cuan]

****  Fix string ?: conditional type resolution, bug1345. [Iztok Jeras]


* Verilator 3.926 2018-08-22

****  Add OBJCACHE envvar support to examples and generated Makefiles.

****  Change MODDUP errors to warnings, msg2588. [Marshal Qiao]

****  Fix define argument stringification (`"), broke since 3.914. [Joe DErrico]

****  Fix to ignore Unicode UTF-8 BOM sequences, msg2576. [HyungKi Jeong]

****  Fix std:: build error, bug1322.

****  Fix function inlining inside certain while loops, bug1330. [Julien Margetts]


* Verilator 3.924 2018-06-12

***   Renamed --profile-cfuncs to --prof-cfuncs.

****  Report interface ports connected to wrong interface, bug1294. [Todd Strader]

****  When tracing, use scalars on single bit arrays to appease vcddiff.

****  Fix parsing "output signed" in V2K port list, msg2540. [James Jung]

****  Fix parsing error on bad missing #, bug1308. [Dan Kirkham]

****  Fix $clog2 to be in verilog 2005, bug1319. [James Hutchinson]


* Verilator 3.922 2018-03-17

**    Support IEEE 1800-2017 as default language.

***   Support trig functions ($sin() etc), bug1281. [Patrick Stewart]

***   Support calling system functions as tasks, bug1285. [Joel Holdsworth]

***   Support assert properties, bug785, bug1290. [John Coiner, et al]

***   Support $writememh. [John Coiner]

***   Add --no-debug-leak to reduce memory use under debug. [John Coiner]

****  Fix severe runtime performance bug in certain foreach loops. [John Coiner]

****  On convergence errors, show activity. [John Coiner]

****  Fix GCC 8.0 issues, bug1273.

****  Fix pullup/pulldowns on bit selects, bug1274. [Rob Stoddard]
